@@ -68,6 +68,7 @@ Version 1.3.1+svn:
  * WML engine
    * new [own_village] condition to check if someone own a particular village
    * new [store_villages] tag to store village locations
+   * new [store_turns] tag to store the number of turns remaining
    * all [store_*] tags get a default variable name
    * use complex variable substitution almost everywhere
    * new key for [set_variable], literal=, to avoid variable substitution
